dnl Process this file with autoconf to produce a configure script.
AC_INIT(crow.h)
AM_INIT_AUTOMAKE(libcrow, 0.0)
AC_DEFINE(_GNU_SOURCE)
AC_DEFINE(_REENTRANT)

dnl Checks for programs.
AM_SANITY_CHECK
AC_PROG_CC
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile libcrow.spec)
